--- a/STM32_Sensorless_BLDC.ioc
+++ b/STM32_Sensorless_BLDC.ioc
@@ -17,10 +17,29 @@ CAN1.CalculateBaudRate=875000
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-CAN2.CalculateBaudRate=875000
-CAN2.CalculateTimeBit=1142
-CAN2.CalculateTimeQuantum=380.95238095238096
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.Request0=SPI2_TX
+Dma.Request1=SPI2_RX
+Dma.RequestsNb=2
+Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.1.Instance=DMA1_Stream3
+Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.1.Mode=DMA_NORMAL
+Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.0.Instance=DMA1_Stream4
+Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.0.Mode=DMA_NORMAL
+Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
@@ -44,7 +63,7 @@ Mcu.IP2=CAN1
 Mcu.IP20=USART2
 Mcu.IP21=USART3
 Mcu.IP22=USART6
-Mcu.IP3=CAN2
+Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
 Mcu.IP5=I2C1
 Mcu.IP6=I2C2
@@ -75,53 +94,56 @@ Mcu.Pin24=PE13
 Mcu.Pin25=PE14
 Mcu.Pin26=PB10
 Mcu.Pin27=PB11
-Mcu.Pin28=PB12
-Mcu.Pin29=PB13
+Mcu.Pin28=PB13
+Mcu.Pin29=PD8
 Mcu.Pin3=PC3
-Mcu.Pin30=PD8
-Mcu.Pin31=PD9
-Mcu.Pin32=PC9
-Mcu.Pin33=PA8
-Mcu.Pin34=PA9
-Mcu.Pin35=PA10
-Mcu.Pin36=PA11
-Mcu.Pin37=PA12
-Mcu.Pin38=PA13
-Mcu.Pin39=PA14
+Mcu.Pin30=PD9
+Mcu.Pin31=PC9
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14
+Mcu.Pin39=PC10
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin40=PC10
-Mcu.Pin41=PC11
-Mcu.Pin42=PC12
-Mcu.Pin43=PD2
-Mcu.Pin44=PD5
-Mcu.Pin45=PD6
-Mcu.Pin46=PG9
-Mcu.Pin47=PG14
-Mcu.Pin48=PG15
-Mcu.Pin49=PB3
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PD5
+Mcu.Pin44=PD6
+Mcu.Pin45=PG9
+Mcu.Pin46=PG14
+Mcu.Pin47=PG15
+Mcu.Pin48=PB3
+Mcu.Pin49=PB4
 Mcu.Pin5=PA1
-Mcu.Pin50=PB4
-Mcu.Pin51=PB5
-Mcu.Pin52=PB6
-Mcu.Pin53=PB7
-Mcu.Pin54=PB8
-Mcu.Pin55=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin56=VP_SYS_VS_tim5
-Mcu.Pin57=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin50=PB5
+Mcu.Pin51=PB6
+Mcu.Pin52=PB7
+Mcu.Pin53=PB8
+Mcu.Pin54=PB9
+Mcu.Pin55=PE0
+Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin57=VP_SYS_VS_tim5
+Mcu.Pin58=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin6=PA2
-Mcu.Pin60=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin60=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=61
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZETx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -129,6 +151,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -166,8 +189,6 @@ PB10.Locked=true
 PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
 PB11.Signal=S_TIM2_CH4
-PB12.Mode=CAN_Activate
-PB12.Signal=CAN2_RX
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -180,13 +201,26 @@ PB4.Signal=SPI1_MISO
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
-PB6.Mode=CAN_Activate
-PB6.Signal=CAN2_TX
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=RGBA
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Locked=true
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=RGB_B
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB9.GPIO_PuPd=GPIO_PULLDOWN
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
 PC11.Mode=Asynchronous
@@ -215,6 +249,13 @@ PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PE0.GPIO_Label=RGB_C
+PE0.GPIO_PuPd=GPIO_PULLDOWN
+PE0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE0.Locked=true
+PE0.PinState=GPIO_PIN_SET
+PE0.Signal=GPIO_Output
 PE11.Signal=S_TIM1_CH2
 PE13.Signal=S_TIM1_CH3
 PE14.Signal=S_TIM1_CH4
@@ -307,7 +348,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_CAN2_Init-CAN2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true,16-MX_UART5_Init-UART5-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART2_UART_Init-USART2-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true,20-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_CAN2_Init-CAN2-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_SPI1_Init-SPI1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_UART4_Init-UART4-false-HAL-true,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_USART1_UART_Init-USART1-false-HAL-true,19-MX_USART2_UART_Init-USART2-false-HAL-true,20-MX_USART3_UART_Init-USART3-false-HAL-true,21-MX_USART6_UART_Init-USART6-false-HAL-true,22-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -403,7 +444,8 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
-TIM9.IPParameters=Prescaler
+TIM9.IPParameters=Prescaler,Period
+TIM9.Period=1000
 TIM9.Prescaler=84-1
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
