--- a/STM32_Sensorless_BLDC.ioc
+++ b/STM32_Sensorless_BLDC.ioc
@@ -1,15 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_2
+ADC1.Channel-2\#ChannelInjectedConversion=ADC_CHANNEL_3
+ADC1.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_4
+ADC1.ContinuousConvMode=ENABLE
+ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T2_CC1
+ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISINGFALLING
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,InjNumberOfConversion,InjectedRank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,Channel-2\#ChannelInjectedConversion,SamplingTime-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,ExternalTrigInjecConv,ExternalTrigInjecConvEdge,NbrOfConversion,ContinuousConvMode
+ADC1.InjNumberOfConversion=3
+ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
+ADC1.InjectedOffset-2\#ChannelInjectedConversion=0
+ADC1.InjectedOffset-3\#ChannelInjectedConversion=0
+ADC1.InjectedRank-1\#ChannelInjectedConversion=1
+ADC1.InjectedRank-2\#ChannelInjectedConversion=2
+ADC1.InjectedRank-3\#ChannelInjectedConversion=3
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC2.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_10
+ADC2.Channel-2\#ChannelInjectedConversion=ADC_CHANNEL_11
+ADC2.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_14
+ADC2.ContinuousConvMode=ENABLE
+ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T3_CC4
+ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISINGFALLING
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,ContinuousConvMode,InjectedRank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,Channel-2\#ChannelInjectedConversion,SamplingTime-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,ExternalTrigInjecConvEdge
+ADC2.InjNumberOfConversion=3
+ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
+ADC2.InjectedOffset-2\#ChannelInjectedConversion=0
+ADC2.InjectedOffset-3\#ChannelInjectedConversion=0
+ADC2.InjectedRank-1\#ChannelInjectedConversion=1
+ADC2.InjectedRank-2\#ChannelInjectedConversion=2
+ADC2.InjectedRank-3\#ChannelInjectedConversion=3
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC2.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_15CYCLES
+ADC2.SamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_15CYCLES
+ADC2.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_15CYCLES
+ADC2.ScanConvMode=ENABLE
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -17,9 +51,20 @@ CAN1.CalculateBaudRate=875000
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.2.Instance=DMA2_Stream0
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=SPI2_TX
 Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
+Dma.Request2=ADC1
+Dma.RequestsNb=3
 Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_TX.1.Instance=DMA2_Stream3
@@ -75,74 +120,78 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PF0
 Mcu.Pin1=PF1
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PB1
-Mcu.Pin16=PF13
-Mcu.Pin17=PF14
-Mcu.Pin18=PF15
-Mcu.Pin19=PG0
-Mcu.Pin2=PC2
-Mcu.Pin20=PG1
-Mcu.Pin21=PE7
-Mcu.Pin22=PE9
-Mcu.Pin23=PE11
-Mcu.Pin24=PE13
-Mcu.Pin25=PE14
-Mcu.Pin26=PB10
-Mcu.Pin27=PB11
-Mcu.Pin28=PB13
-Mcu.Pin29=PD8
-Mcu.Pin3=PC3
-Mcu.Pin30=PD9
-Mcu.Pin31=PC9
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PC10
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin40=PC11
-Mcu.Pin41=PC12
-Mcu.Pin42=PD2
-Mcu.Pin43=PD5
-Mcu.Pin44=PD6
-Mcu.Pin45=PG9
-Mcu.Pin46=PG14
-Mcu.Pin47=PG15
-Mcu.Pin48=PB3
-Mcu.Pin49=PB4
-Mcu.Pin5=PA1
-Mcu.Pin50=PB5
-Mcu.Pin51=PB6
-Mcu.Pin52=PB7
-Mcu.Pin53=PB8
-Mcu.Pin54=PB9
-Mcu.Pin55=PE0
-Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin57=VP_SYS_VS_tim5
-Mcu.Pin58=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin6=PA2
-Mcu.Pin60=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=62
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PF13
+Mcu.Pin19=PF14
+Mcu.Pin2=PC0
+Mcu.Pin20=PF15
+Mcu.Pin21=PG0
+Mcu.Pin22=PG1
+Mcu.Pin23=PE7
+Mcu.Pin24=PE9
+Mcu.Pin25=PE11
+Mcu.Pin26=PE13
+Mcu.Pin27=PE14
+Mcu.Pin28=PB10
+Mcu.Pin29=PB11
+Mcu.Pin3=PC1
+Mcu.Pin30=PB13
+Mcu.Pin31=PD8
+Mcu.Pin32=PD9
+Mcu.Pin33=PC9
+Mcu.Pin34=PA8
+Mcu.Pin35=PA9
+Mcu.Pin36=PA10
+Mcu.Pin37=PA11
+Mcu.Pin38=PA12
+Mcu.Pin39=PA13
+Mcu.Pin4=PC2
+Mcu.Pin40=PA14
+Mcu.Pin41=PC10
+Mcu.Pin42=PC11
+Mcu.Pin43=PC12
+Mcu.Pin44=PD2
+Mcu.Pin45=PD5
+Mcu.Pin46=PD6
+Mcu.Pin47=PG9
+Mcu.Pin48=PG14
+Mcu.Pin49=PG15
+Mcu.Pin5=PC3
+Mcu.Pin50=PB3
+Mcu.Pin51=PB4
+Mcu.Pin52=PB5
+Mcu.Pin53=PB6
+Mcu.Pin54=PB7
+Mcu.Pin55=PB8
+Mcu.Pin56=PB9
+Mcu.Pin57=PE0
+Mcu.Pin58=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin59=VP_SYS_VS_tim5
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin60=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=64
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZETx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -158,6 +207,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM5_IRQn
 NVIC.TimeBaseIP=TIM5
@@ -222,6 +272,8 @@ PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
+PC0.Signal=ADCx_IN10
+PC1.Signal=ADCx_IN11
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
 PC11.Mode=Asynchronous
@@ -382,6 +434,10 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.ADCx_IN10.0=ADC2_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN11.0=ADC2_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN14.0=ADC2_IN14,IN14
 SH.ADCx_IN14.ConfNb=1
 SH.ADCx_IN15.0=ADC2_IN15,IN15
