--- a/STM32_Sensorless_BLDC.ioc
+++ b/STM32_Sensorless_BLDC.ioc
@@ -64,7 +64,9 @@ Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=SPI2_TX
 Dma.Request1=SPI1_TX
 Dma.Request2=ADC1
-Dma.RequestsNb=3
+Dma.Request3=USART1_TX
+Dma.Request4=USART1_RX
+Dma.RequestsNb=5
 Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_TX.1.Instance=DMA2_Stream3
@@ -85,6 +87,26 @@ Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.0.Priority=DMA_PRIORITY_HIGH
 Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.4.Instance=DMA2_Stream2
+Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.4.Mode=DMA_NORMAL
+Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.3.Instance=DMA2_Stream7
+Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.3.Mode=DMA_NORMAL
+Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
@@ -101,13 +123,14 @@ Mcu.IP13=TIM1
 Mcu.IP14=TIM2
 Mcu.IP15=TIM3
 Mcu.IP16=TIM9
-Mcu.IP17=UART4
-Mcu.IP18=UART5
-Mcu.IP19=USART1
+Mcu.IP17=TIM10
+Mcu.IP18=UART4
+Mcu.IP19=UART5
 Mcu.IP2=CAN1
-Mcu.IP20=USART2
-Mcu.IP21=USART3
-Mcu.IP22=USART6
+Mcu.IP20=USART1
+Mcu.IP21=USART2
+Mcu.IP22=USART3
+Mcu.IP23=USART6
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
 Mcu.IP5=I2C1
@@ -115,74 +138,78 @@ Mcu.IP6=I2C2
 Mcu.IP7=I2C3
 Mcu.IP8=NVIC
 Mcu.IP9=RCC
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF0
-Mcu.Pin1=PF1
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PF13
-Mcu.Pin19=PF14
-Mcu.Pin2=PC0
-Mcu.Pin20=PF15
-Mcu.Pin21=PG0
-Mcu.Pin22=PG1
-Mcu.Pin23=PE7
-Mcu.Pin24=PE9
-Mcu.Pin25=PE11
-Mcu.Pin26=PE13
-Mcu.Pin27=PE14
-Mcu.Pin28=PB10
-Mcu.Pin29=PB11
-Mcu.Pin3=PC1
-Mcu.Pin30=PB13
-Mcu.Pin31=PD8
-Mcu.Pin32=PD9
-Mcu.Pin33=PC9
-Mcu.Pin34=PA8
-Mcu.Pin35=PA9
-Mcu.Pin36=PA10
-Mcu.Pin37=PA11
-Mcu.Pin38=PA12
-Mcu.Pin39=PA13
-Mcu.Pin4=PC2
-Mcu.Pin40=PA14
-Mcu.Pin41=PC10
-Mcu.Pin42=PC11
-Mcu.Pin43=PC12
-Mcu.Pin44=PD2
-Mcu.Pin45=PD5
-Mcu.Pin46=PD6
-Mcu.Pin47=PG9
-Mcu.Pin48=PG14
-Mcu.Pin49=PG15
-Mcu.Pin5=PC3
-Mcu.Pin50=PB3
-Mcu.Pin51=PB4
-Mcu.Pin52=PB5
-Mcu.Pin53=PB6
-Mcu.Pin54=PB7
-Mcu.Pin55=PB8
-Mcu.Pin56=PB9
-Mcu.Pin57=PE0
-Mcu.Pin58=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin59=VP_SYS_VS_tim5
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin60=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=64
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
+Mcu.Pin2=PE4
+Mcu.Pin20=PB1
+Mcu.Pin21=PF13
+Mcu.Pin22=PF14
+Mcu.Pin23=PF15
+Mcu.Pin24=PG0
+Mcu.Pin25=PG1
+Mcu.Pin26=PE7
+Mcu.Pin27=PE9
+Mcu.Pin28=PE11
+Mcu.Pin29=PE13
+Mcu.Pin3=PF0
+Mcu.Pin30=PE14
+Mcu.Pin31=PB10
+Mcu.Pin32=PB11
+Mcu.Pin33=PB13
+Mcu.Pin34=PD8
+Mcu.Pin35=PD9
+Mcu.Pin36=PC9
+Mcu.Pin37=PA8
+Mcu.Pin38=PA9
+Mcu.Pin39=PA10
+Mcu.Pin4=PF1
+Mcu.Pin40=PA11
+Mcu.Pin41=PA12
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PC10
+Mcu.Pin45=PC11
+Mcu.Pin46=PC12
+Mcu.Pin47=PD2
+Mcu.Pin48=PD5
+Mcu.Pin49=PD6
+Mcu.Pin5=PC0
+Mcu.Pin50=PG9
+Mcu.Pin51=PG14
+Mcu.Pin52=PG15
+Mcu.Pin53=PB3
+Mcu.Pin54=PB4
+Mcu.Pin55=PB5
+Mcu.Pin56=PB6
+Mcu.Pin57=PB7
+Mcu.Pin58=PB8
+Mcu.Pin59=PB9
+Mcu.Pin6=PC1
+Mcu.Pin60=PE0
+Mcu.Pin61=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin62=VP_SYS_VS_tim5
+Mcu.Pin63=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin64=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin65=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin67=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=68
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZETx
@@ -192,7 +219,9 @@ NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -208,9 +237,11 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM5_IRQn
 NVIC.TimeBaseIP=TIM5
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Signal=S_TIM2_CH2
@@ -312,6 +343,18 @@ PE0.Signal=GPIO_Output
 PE11.Signal=S_TIM1_CH2
 PE13.Signal=S_TIM1_CH3
 PE14.Signal=S_TIM1_CH4
+PE2.GPIOParameters=GPIO_PuPd
+PE2.GPIO_PuPd=GPIO_PULLUP
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_PuPd
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_PuPd
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.Locked=true
+PE4.Signal=GPIO_Input
 PE7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PE7.GPIO_Label=Toggle
 PE7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -401,7 +444,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true,16-MX_UART5_Init-UART5-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART2_UART_Init-USART2-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true,20-MX_USART6_UART_Init-USART6-false-HAL-true,21-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_UART4_Init-UART4-false-HAL-true,16-MX_UART5_Init-UART5-false-HAL-true,17-MX_USART1_UART_Init-USART1-false-HAL-true,18-MX_USART2_UART_Init-USART2-false-HAL-true,19-MX_USART3_UART_Init-USART3-false-HAL-true,20-MX_USART6_UART_Init-USART6-false-HAL-true,21-MX_TIM9_Init-TIM9-false-HAL-true,22-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -489,6 +532,9 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=1000
+TIM10.Prescaler=84-1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -520,6 +566,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim5.Mode=TIM5
 VP_SYS_VS_tim5.Signal=SYS_VS_tim5
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
